kahip executables only work per machine, linking kahip as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "KaHIP"]
 	path = KaHIP
 	url = https://github.com/KaHIP/KaHIP.git
+[submodule "external/KaHIP"]
+	path = external/KaHIP
+	url = https://github.com/KaHIP/KaHIP.git
